<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.vaccination.AppointmentActivity">

    <EditText
        android:id="@+id/inputName"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/namehint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/inputSurname"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/surnamehint"

        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toEndOf="@+id/inputName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/inputAmka"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/amkahint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName"
        app:layout_constraintVertical_bias="0.059" />

    <EditText
        android:id="@+id/inputTelephone"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telhint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.376"
        app:layout_constraintStart_toEndOf="@+id/inputAmka"
        app:layout_constraintTop_toBottomOf="@+id/inputSurname"
        app:layout_constraintVertical_bias="0.059" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emailhint"
        android:inputType="text"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <EditText
        android:id="@+id/inputDate"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/datehint"
        android:inputType="text"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        app:layout_constraintVertical_bias="0.077" />

    <EditText
        android:id="@+id/inputTime"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/timehint"

        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toEndOf="@+id/inputDate"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        app:layout_constraintVertical_bias="0.077" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickSave"
        android:text="@string/btnsub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDate"
        app:layout_constraintVertical_bias="0.117" />

</androidx.constraintlayout.widget.ConstraintLayout>