<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/statpg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stat.StatFragment">


    <EditText
        android:id="@+id/date_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/from"
        android:ems="10"
        android:hint="@string/datehint"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <EditText
        android:id="@+id/date_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/to"
        android:ems="10"
        android:hint="@string/datehint"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_from"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/fromlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        app:layout_constraintBottom_toTopOf="@+id/date_from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />

    <TextView
        android:id="@+id/tolabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintBottom_toTopOf="@+id/date_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_from"
        app:layout_constraintVertical_bias="0.755" />


    <TextView
        android:id="@+id/emv"
        android:layout_width="94dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/emvolio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/res_emv"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toEndOf="@+id/emv"
        app:layout_constraintTop_toBottomOf="@+id/btn"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/emva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/emvolioa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emv"
        app:layout_constraintVertical_bias="0.050000012" />


    <TextView
        android:id="@+id/res_emva"
        android:layout_width="86dp"
        android:layout_height="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toEndOf="@+id/emva"
        app:layout_constraintTop_toBottomOf="@+id/res_emv"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/emvb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/emvoliob"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emva"
        app:layout_constraintVertical_bias="0.054" />


    <TextView
        android:id="@+id/res_emvb"
        android:layout_width="84dp"
        android:layout_height="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toEndOf="@+id/emvb"
        app:layout_constraintTop_toBottomOf="@+id/res_emva"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/emvtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sunemvolio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emvb"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/res_sunemv"
        android:layout_width="99dp"
        android:layout_height="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toEndOf="@+id/emvtotal"
        app:layout_constraintTop_toBottomOf="@+id/res_emvb"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_to"
        app:layout_constraintVertical_bias="0.152" />


</androidx.constraintlayout.widget.ConstraintLayout>